fixed most of the spacing issues on the shop view page

--- a/src/pages/ListView/ListView.css
+++ b/src/pages/ListView/ListView.css
@@ -5,6 +5,6 @@
   height: 150px;
 }
 
-.list-card {
-  /* margin: 0 2vw; */
+.list {
+  height: 100vh;
 }
